@@ -263,6 +263,9 @@ list of changes.
 -   BUG FIX: Let `post_fun` take into account the `batch_tasks`
     parameter; output files could consist of multiple tasks.
 
+-   MINOR CHANGE: `qsub_retrieve()` now uses pbapply when loading in the
+    output.
+
 ### Latest changes in qsub 1.0.0 (30-07-2018)
 
 -   INITIAL RELEASE: qsub allows you to run lapply() calls in parallel
